--- a/room4.html
+++ b/room4.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/room4.css" />
   </head>
   <body>
-    <h1>Can you reveal the number 4?</h1>
+    <h1>Can you reveal the number?</h1>
     <img id="clickable-image" src="assets/treasure.webp" alt="Click Me" />
-    <div id="reveal-number">4</div>
+    <div id="reveal-number">8</div>
     <script src="js/room4.js"></script>
   </body>
 </html>
