--- a/room2.html
+++ b/room2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitOut: room 2</title>
-    <link rel="stylesheet" href="css/styleR2.css">
+    <link rel="stylesheet" href="css/room2.css">
 </head>
 
 <body>
